Configurations and First Excel Test

--- a/Blog-Skeleton/Blog.UI.Tests/app.config
+++ b/Blog-Skeleton/Blog.UI.Tests/app.config
@@ -12,4 +12,5 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <appSettings configSource="Configurations\Environment.config" />
 </configuration>
