--- a/Blog-Skeleton/Blog.UI.Tests/Configurations/Environment.config
+++ b/Blog-Skeleton/Blog.UI.Tests/Configurations/Environment.config
@@ -1,4 +1,4 @@
 ﻿<appSettings>
   <add key="TestDataSheetPath" value="\DataDriven\"/>
-  <add key="Logs" value="\Blog.UI.Tests\Logs\"/>
+  <add key="Logs" value="..\\..\\..\\Logs\"/>
 </appSettings>
